# GameEngine

./: CMakeLists.txt  main.cpp
libs/math/: matrix.h  my_math.h  tests.h  vector.h
libs/scene/: scene.cpp  scene.h
libs/scene/object/: object.cpp  object.h  primitive.h
libs/utils/: assimpParser.cpp  assimpParser.h  shaderLoader.cpp  shaderLoader.h
render/: loader.cpp  loader.h
res/shaders/: shader.fs  shader.vs
